--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services: 
   db:
-    image: mysql:5.7
+    image: mysql:5.7    
+    volumes: 
+      - db-volume:/var/lib/mysql
     environment: 
       MYSQL_ROOT_PASSWORD: 'password'
   web:
@@ -13,3 +15,5 @@ services:
       - "3000:3000"
     depends_on:
       - db
+volumes:
+  db-volume:
